04-ratings-deployable.yaml
# Source: bookinfo/charts/ratings/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    mcm.ibm.com/service-discovery: "{}"
  name: ratings
  labels:
    app.kubernetes.io/name: ratings
    app.kubernetes.io/instance: bookinfo-demo
spec:
  ports:
    - port: 9080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ratings
    app.kubernetes.io/instance: bookinfo-demo

---
# Source: bookinfo/charts/ratings/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-demo-ratings
  labels:
    runtime: node
    app.kubernetes.io/name: ratings
    app.kubernetes.io/instance: bookinfo-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ratings
      app.kubernetes.io/instance: bookinfo-demo
  template:
    metadata:
      labels:
        runtime: node
        app.kubernetes.io/name: ratings
        app.kubernetes.io/instance: bookinfo-demo
    spec:
      containers:
        - env:
          - name: DB_TYPE
            value: mysql
          - name: MYSQL_DB_HOST
            value: mysqldb
          - name: MYSQL_DB_PORT
            value: "3306"
          - name: MYSQL_DB_USER
            value: root
          - name: MYSQL_DB_PASSWORD
            value: password
          - name: OPENTRACING_ENABLED
            value: "true"
          - name: JAEGER_SAMPLER_TYPE
            value: probabilistic
          - name: OPENTRACING_SAMPLER
            value: "1"
          - name: LATENCY_SAMPLER_PARAM
            value: "1"
          name: ratings
          image: "docker.io/dymaczew/examples-bookinfo-ratings-v2:2021.2.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            {}
