05-mysqldb-deployable.yaml
# Source: bookinfo/charts/mysqldb/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  annotations:
    mcm.ibm.com/service-discovery: "{}"
  labels:
    app.kubernetes.io/name: mysqldb
    app.kubernetes.io/instance: bookinfo-demo
spec:
  ports:
    - port: 3306
      protocol: TCP
      name: tcp
  selector:
    app.kubernetes.io/name: mysqldb
    app.kubernetes.io/instance: bookinfo-demo

---
# Source: bookinfo/charts/mysqldb/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-demo-mysqldb
  labels:
    app.kubernetes.io/name: mysqldb
    app.kubernetes.io/instance: bookinfo-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mysqldb
      app.kubernetes.io/instance: bookinfo-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mysqldb
        app.kubernetes.io/instance: bookinfo-demo
    spec:
      containers:
        - name: mysqldb
          image: "docker.io/dymaczew/examples-bookinfo-mysqldb:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3306
              protocol: TCP
          resources:
            {}                
---
