06-Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bookinfo-ingress
  annotations:
    mcm.ibm.com/service-discovery: "{}"
  labels:
    app.kubernetes.io/name: bookinfo
    app.kubernetes.io/instance: bookinfo-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bookinfo23.targetcluster-1303bf06b541565e09085cf582022ff2-0000.jp-tok.containers.appdomain.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: productpage
          servicePort: 9080
